# Glasswally

./: CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  THREAT_MODEL.md  dispatcher.rs  docker-compose.yml  events.rs  fingerprint.rs  fusion.rs  main.rs  pivot.rs  window.rs
.github/workflows/: ci.yml
datasets/: labeled_5k.jsonl
docs/: differential_privacy.md  evasion_cost_analysis.md
falco/: README.md  glasswally_rules.yaml
glasswally/: Cargo.toml  build.rs
glasswally-ebpf/: Cargo.toml
glasswally-ebpf/src/: main.rs
glasswally/src/: events.rs  grpc_api.rs  http_reconstruct.rs  ioc_feed.rs  kafka_output.rs  load_shedder.rs  loader.rs  main.rs  otel.rs  redis_state.rs  redteam.rs
glasswally/src/engine/: dispatcher.rs  fusion.rs  mod.rs
glasswally/src/eval/: mod.rs  report.rs
glasswally/src/state/: window.rs
glasswally/src/workers/: asn_classifier.rs  biometric.rs  cot.rs  embed.rs  fingerprint.rs  h2_grpc.rs  hydra.rs  mod.rs  pivot.rs  refusal_probe.rs  role_preamble.rs  sequence_model.rs  session_gap.rs  timing_cluster.rs  token_budget.rs  velocity.rs  watermark.rs
monitoring/: prometheus.yml
tools/: loggen.py
xtask/: Cargo.toml
xtask/src/: main.rs
yara/: glasswally.yar
