[workspace]
members = ["glasswally", "glasswally-ebpf", "xtask"]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["m0rs3c0d3"]
repository  = "https://github.com/m0rs3c0d3/glasswally"
description = "Real-time LLM distillation attack detection via eBPF"

# Shared dependencies — referenced as workspace.dependencies in members
[workspace.dependencies]
# Async
tokio        = { version = "1",   features = ["full"] }

# eBPF
aya          = { version = "0.12", features = ["async_tokio"] }
aya-log      = "0.2"

# Serialization
serde        = { version = "1",   features = ["derive"] }
serde_json   = "1"

# Concurrent state
dashmap      = "5"
parking_lot  = "0.12"

# Pattern matching
aho-corasick = "1"

# Hashing
md5          = "0.7"
hex          = "0.4"
sha2         = "0.10"
hmac         = "0.12"

# Graph
petgraph     = "0.6"

# CLI + logging
clap         = { version = "4",   features = ["derive"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time
chrono       = { version = "0.4", features = ["serde"] }

# Error handling
anyhow       = "1"
thiserror    = "1"

[profile.dev]
opt-level = 1

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"

# BPF programs need special profile
[profile.bpf-release]
inherits  = "release"
opt-level = 2          # BPF verifier struggles with O3
panic     = "abort"
